--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: telegram message
-on: [push]
+on:
+  push:
+  pull_request:
 jobs:
 
   build:
@@ -12,4 +14,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_ID }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        args: The user ${{ github.actor }} ${{ github.event_name }} .
+        args: The user ${{ github.actor }} ${{ github.event_name }}.
