--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_ID }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        args: The user ${{ github.actor }} ${{ github.event_name }}.
+        args: ${{ github.actor }} created a ${{ github.event_name }} with ${{ github.head_ref }}.
