--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_ID }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        args: ${{ github.actor }} created a ${{ github.event_name }} for branch ${BRANCH_NAME}.
+        args: ${{ github.actor }} created a ${{ github.event_name }} for branch ${GITHUB_REF##*/}.
